--- a/settings/custom.qss
+++ b/settings/custom.qss
@@ -1,11 +1,5 @@
-QLabel, QPushButton, QCheckBox, QRadioButton, QMenu, QMenuBar {font-family: Tahoma, Microsoft YaHei, Arial, sans-serif;}
+QLabel, QPushButton, QCheckBox, QRadioButton, QMenu, QMenuBar, QDockWidget {font-family: Tahoma, Microsoft YaHei, Arial, sans-serif;}
 
 /* QMenu {font: italic;} */
-
-/* DockLabel[orientation="horizontal"] {} */
-/* DockLabel[orientation="vertical"] {} */
-
-DockLabel[dim="true"] {font:italic; background-color: yellow;}
-DockLabel {font-family: Tahoma, Microsoft YaHei, Arial, sans-serif;}
 
 QTableWidget {font-family: Arial; font-size: 8pt;}
