--- a/settings/custom.qss
+++ b/settings/custom.qss
@@ -3,3 +3,5 @@ QLabel, QPushButton, QCheckBox, QRadioButton, QMenu, QMenuBar, QDockWidget {font
 /* QMenu {font: italic;} */
 
 QTableWidget {font-family: Arial; font-size: 8pt;}
+
+DataSetting, AlgorithmSetting, AppSetting {border: 2px solid;}
