--- a/settings/custom.qss
+++ b/settings/custom.qss
@@ -1,7 +1,9 @@
-QLabel, QPushButton, QCheckBox, QRadioButton, QMenu, QMenuBar, QDockWidget {font-family: Tahoma, Microsoft YaHei, Arial, sans-serif;}
+QLabel, QPushButton, QCheckBox, QRadioButton, QMenu, QMenuBar, QDockWidget, QLineEdit, QComboBox {font-family: Tahoma, Microsoft YaHei, Arial, sans-serif;}
 
 /* QMenu {font: italic;} */
 
-QTableWidget {font-family: Arial; font-size: 8pt;}
-
 DataSetting, AlgorithmSetting, AppSetting {border: 2px solid;}
+
+QTableView QHeaderView::section {font-size: 10pt; font-family: Times New Roman;}
+/* QTableWidget::item {} */
+QTableWidget {font-size: 8pt; font-family: Times New Roman;}
