--- a/settings/custom.qss
+++ b/settings/custom.qss
@@ -7,3 +7,5 @@ DataSetting, AlgorithmSetting, AppSetting {border: 2px solid;}
 QTableView QHeaderView::section {font-size: 10pt; font-family: Times New Roman;}
 /* QTableWidget::item {} */
 QTableWidget {font-size: 8pt; font-family: Times New Roman;}
+
+QMenuBar, QDockWidget {font-size: 10pt;}
