--- a/settings/qss/MaterialDark.qss
+++ b/settings/qss/MaterialDark.qss
@@ -393,7 +393,7 @@ QSlider::sub-page:vertical {
 /* Custom */
 QDockWidget,
 QScrollBar,
-PlotWidget,
+QChartView,
 QHeaderView:section,
 QTableView,
 QTableView QTableCornerButton::section,
