--- a/settings/qss/Ubuntu.qss
+++ b/settings/qss/Ubuntu.qss
@@ -566,7 +566,7 @@ QToolBox::tab:selected {
 
 /* Custom */
 QDockWidget,
-PlotWidget,
+QChartView,
 QHeaderView:section,
 QTableView,
 QTableView QTableCornerButton::section,
