--- a/QGrain/settings/qss/ElegantDark.qss
+++ b/QGrain/settings/qss/ElegantDark.qss
@@ -206,6 +206,14 @@ QTableView,
 QTableView QTableCornerButton::section,
 QHeaderView:active {color: rgb(255, 255, 255); background-color: rgb(82, 82, 82);}
 
+QSpinBox, QDoubleSpinBox {
+	padding-right: 20px;
+	color: rgb(255, 255, 255);
+	border: 1px solid rgb(255, 255, 255);
+	background: rgb(82, 82, 82);
+	min-width: 40px;
+}
+
 QTableView {
     alternate-background-color: rgb(42, 42, 42);
     selection-background-color: rgb(128, 128, 128);
